<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">ePOSReceiptPrintSample</string>
    <string name="main_button_discovery">Printer Discovery / Select</string>
	<string name="main_button_print">Print</string>
    <string name="discovery_label_interfacetype">Interface Type</string>
    <string name="discovery_radio_tcp">TCP(Wi-Fi)</string>
    <string name="discovery_radio_blueooth">Bluetooth</string>
    <string name="discovery_radio_usb" >USB</string>
    <string name="discovery_label_printerlist">Printer List</string>
    <string name="printername_t88v">TM-T88V</string>
    <string name="printername_t70">TM-T70</string>
    <string name="printername_u220">TM-U220</string>
    <string name="printername_u330">TM-U330</string>
    <string name="printername_p60">TM-P60</string>
    <string name="printername_p60ii">TM-P60II</string>
    <string name="printername_t20">TM-T20</string>
    <string name="printername_t82">TM-T82</string>
    <string name="printername_t81ii">TM-T81II</string>
    <string name="printername_t82ii">TM-T82II</string>
    <string name="printername_t83ii">TM-T83II</string>
    <string name="printername_t70ii">TM-T70II</string>
    <string name="printername_t90ii">TM-T90II</string>
    <string name="printername_t20ii">TM-T20II</string>
    <string name="printername_p20">TM-P20</string>
    <string name="printername_p80">TM-P80</string>
    <string name="printername_m10">TM-m10</string>
    <string name="methoderr_errcode">Error Code</string>
    <string name="methoderr_method">Method</string>
    <string name="handlingmsg_err_head">Print head of printer is hot.\n</string>
    <string name="handlingmsg_err_motor">Motor Driver IC of printer is hot.\n</string>
    <string name="handlingmsg_err_battery">Battery of printer is hot.\n</string>
    <string name="handlingmsg_err_overheat">Please wait until error LED of the printer turns off. \n</string>
    <string name="handlingmsg_err_no_response">Please check the connection of the printer and the mobile terminal.\nConnection get lost.\n</string>
    <string name="handlingmsg_err_cover_open">Please close roll paper cover.\n</string>
    <string name="handlingmsg_err_paper_feed">Please release a paper feed switch.\n</string>
    <string name="handlingmsg_err_receipt_end">Please check roll paper.\n</string>
    <string name="handlingmsg_err_wrong_paper">Please set correct roll paper.\n</string>
    <string name="handlingmsg_err_autocutter">Please remove jammed paper and close roll paper cover.\nIf cannot open roll paper cover, please open cutter cover, and turn knob in the direction of the arrow marked on the inside of the cutter cover until roll paper cover is opened.\n</string>
    <string name="handlingmsg_err_need_recover">Then, If the printer doesn\'t recover from error, please cycle the power switch.\n</string>
    <string name="handlingmsg_err_unrecover">Please cycle the power switch of the printer.\nIf same errors occurred even power cycled, the printer may out of order.</string>
    <string name="handlingmsg_err_battery_real_end">Please connect AC adapter or change the battery.\nBattery of printer is almost empty.\n</string>
    <string name="handlingmsg_warn_receipt_near_end">Roll paper is nearly end.\n</string>
    <string name="handlingmsg_warn_battery_near_end">Battery level of printer is low.\n</string>
    <string name="handlingmsg_ex_param">Programming error: Parameter error has occurred.\n</string>
    <string name="handlingmsg_ex_open">Please check the connection of the printer and the mobile terminal.\nFailed to open communication port.\n</string>
    <string name="handlingmsg_ex_connect">Please reconnect the printer and the mobile terminal.\nFailed to communicate with the printer.\n</string>
    <string name="handlingmsg_ex_timeout">Please check the connection of the printer and the mobile terminal.\nCommunication has timed out.\n</string>
    <string name="handlingmsg_ex_memory">Please close unnessesary applications.\nFree memory of the mobile terminal is insufficient.</string>
    <string name="handlingmsg_ex_illegal">Programming error: Some API was called improperly.\n</string>
    <string name="handlingmsg_ex_processing">Programming error: Please wait until completion of current processing.\n</string>
    <string name="handlingmsg_ex_unsupported">Programming error: Unsupported printer has selected.\n</string>
    <string name="handlingmsg_ex_off_line">Printer is offline.\n</string>
    <string name="handlingmsg_ex_failure">Please check communication settings of the mobile terminal and application execution environment.\nUnknown error has occurred.\n</string>
    <string name="handlingmsg_ex_application_error">Please contact developer of this application.\nApplication error has occurred.\n</string>
    <string name="handlingmsg_notice_printer_problems">Printer problems:\n</string>
    <string name="handlingmsg_notice_failed">Failed to get printer status.\n</string>
    <string name="handlingmsg_notice_error">Error:\n</string>
    <string name="handlingmsg_notice_warning">Warning:\n</string>
    <string name="text_label_printer">Printer Name</string>
    <string name="text_label_modelname">Printer Model</string>
    <string name="text_label_warnings">Printer Warnings</string>
    <string name="model_ank">ANK</string>
    <string name="model_japanese">JAPANESE</string>
    <string name="model_chinese">CHINESE</string>
    <string name="model_taiwan">TAIWAN</string>
    <string name="model_korean">KOREAN</string>
    <string name="model_thai">THAI</string>
    <string name="model_southasia">SOUTH ASIA</string>
    <string name="model_other">Other</string>
</resources>
